# nginx_logs

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx_logs/: manage.py
nginx_logs/logs/: admin.py  models.py  serializers.py  urls.py  views.py
nginx_logs/logs/management/commands/: import_nginx_log.py
nginx_logs/logs/migrations/: 0001_initial.py  0002_fileprogress.py
nginx_logs/logs/tests/: test_models.py  test_serializers.py  test_views.py
nginx_logs/nginx_logs/: asgi.py  settings.py  urls.py  wsgi.py
